--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export"
-
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
+    "lucide-react": "^0.510.0",
+    "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss": "^4.1.6",
+    "@types/node": "22.15.17",
+    "@types/react": "19.1.4",
+    "tailwindcss": "^4.1.6",
+    "typescript": "5.8.3"
   }
 }
