--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
